--- a/popup.html
+++ b/popup.html
@@ -1,21 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tab Sync</title>
-    <style>
-        body { font-family: Arial, sans-serif; width: 320px; padding: 10px; }
-        button { margin: 5px; padding: 8px; width: 90%; }
-        #tabList { margin-top: 10px; max-height: 300px; overflow-y: auto; }
-    </style>
+    <script src="popup.js" defer></script>
 </head>
 <body>
-    <h2>Tab Synchronizer</h2>
-    <button id="syncButton">Sync Tabs</button>
-    <button id="restoreButton">Restore Tabs</button>
-    <button id="viewTabsButton">View Synced Tabs</button>
-    <div id="tabList"></div>
-    <script src="popup.js"></script>
+    <button id="sync">Sync Tabs</button>
+    <button id="load">Load Tabs</button>
+    <button id="view">View Tabs</button>
 </body>
 </html>
